--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -9,7 +9,7 @@ SPDX-License-Identifier: MIT
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Robot Visual Perception</title>
+    <title>OptiBot</title>
   </head>
   <body>
     <div id="root"></div>
